# tiny-infer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  generate_compile_commands.sh
docs/: API.md  ARCHITECTURE.md
examples/: CMakeLists.txt  benchmark.cpp  custom_operator.cpp  model_loading.cpp  simple_inference.cpp
include/inference/: engine.h  inference.h  model.h  operator.h  tensor.h
src/: engine.cpp  inference.cpp  model.cpp  operator.cpp  tensor.cpp
tests/: CMakeLists.txt  test_operators.cpp  test_tensor.cpp
